Fix card's button bottom padding to be fully visible in mobile resolution

--- a/app/assets/styles/modules/_card.css
+++ b/app/assets/styles/modules/_card.css
@@ -98,7 +98,8 @@
 
 .container .card .content a {
     display: inline-block;
-    margin-top: 10px;
+    margin-top: 5px;
+    margin-bottom: 5px;
     padding: 5px 10px;
     background: #333;
     text-decoration: none;
@@ -146,5 +147,9 @@
     .container .card .content {
         position: relative;
         width: 100%;
+    }
+    .container .card .content a {
+        margin-top: 5px;
+        margin-bottom: 15px;
     }
 }
